apps/mimir/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mimir-gateway
  labels:
    app.kubernetes.io/name: mimir
    app.kubernetes.io/instance: mimir
    app.kubernetes.io/component: gateway
    app.kubernetes.io/version: "3.0.2"
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  ports:
    - port: 80
      protocol: TCP
      name: http-metrics
      targetPort: http-metrics
    - port: 8080
      protocol: TCP
      name: legacy-http-metrics
      targetPort: http-metrics
  selector:
    app.kubernetes.io/name: mimir
    app.kubernetes.io/instance: mimir
    app.kubernetes.io/component: gateway
